# actix-session-security

./: Cargo.toml  README.md
examples/: call_api_by_admin.rs  call_api_by_editor.rs  call_api_by_editor_and_admin.rs  impl_traits.rs  routes.rs
examples/common/: create_server.rs
examples/common/models/: role.rs
src/: lib.rs
src/traits/: mod.rs  secured_role.rs  secured_session.rs  session_service.rs
src/wrappers/: logout.rs  mod.rs  secured.rs  session.rs  utils.rs
