[package]
name = "actix-session-security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "~0.1"
actix-web = { version = "~4.4" }
futures = "~0.3"

[dev-dependencies]
uuid = { version = "~1.6", features = ["v4"] }
reqwest = { version = "~0.11", features = ["cookies"]}
thiserror = "~1.0"
actix = "~0.13"
# futures = "~0.3"